# pong-sdl3

./: CMakeLists.txt
src/: audio_generation.cpp  audio_generation.h  ball.cpp  ball.h  collision.h  collision_util.cpp  collision_util.h  divider.cpp  divider.h  game_window.cpp  game_window.h  gamestate.h  main.cpp  movement.cpp  movement.h  number_gen_util.cpp  number_gen_util.h  player.cpp  player.h  player_paddle.cpp  player_paddle.h  score.cpp  score.h  sdl_error.cpp  sdl_error.h  sdl_error_util.cpp  sdl_error_util.h  sdl_renderer.cpp  sdl_renderer.h  sdl_window.cpp  sdl_window.h  sprite.cpp  sprite.h
